// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render header title if game is not started 1`] = `
<header
  class=""
  data-testid="header"
>
  <span>
    ui.header.title
  </span>
</header>
`;

exports[`Header should render user balance with currency if game is started 1`] = `
<header
  class=""
  data-testid="header"
>
  <div
    data-testid="animated-number"
  >
    42
  </div>
</header>
`;
